<resources>
    <string name="app_name">MapX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Bienvenue/Welcome</string>
    <string name="quit">Quit</string>
    <string name="quit_message">Do you really want to quit?</string>

    <string name="no_external_storage">Error: Device does not have or cannot access external storage; impossible to download data</string>
    <string name="no_external_storage_short">Error: no external storage</string>
    <string name="no_connection_retry">Retry Connection</string>
    <string name="no_connection_toast">Cannot connect to network</string>


    <string name="action_settings">Settings</string>

    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- Navigation Bar -->
    <string name="navigation_drawer_story_lines">Story-lines</string>
    <string name="navigation_drawer_museum_map">Museum Map</string>
    <string name="navigation_drawer_qr_scanner">QR Scanner</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help_feedback">Help &amp; Feedback</string>
    <string name="navigation_drawer_beacon_stub">POI Beacon Stub</string>

    <!-- action bar -->
    <string name="action_bar_search">Search Museum</string>

    <!-- Language Settings -->
    <string name="settings_language">Languages</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="language_init_dialog_title">Language Preferences</string>
    <string name="language_init_dialog_body">The default language of the application is English.  Would you like to change it?</string>

    <!-- POI -->
    <string name="poi_selected_as_destination">Selected exhibition point %1$s as destination</string>
    <string name="poi_leave_navigation">Leave Navigation</string>
    <string name="search_text_view_placeholder">Enter POI Name</string>

    <!-- Storylines -->
    <string name="storyline_list_item_start">START STORYLINE</string>
    <string name="storyline_leave">Leave Storyline</string>
    <string name="storyline_leave_message">Do you want to leave the current storyline?</string>
    <string name="storyline_start_toast">Started %1$s Storyline</string>
    <string name="storyline_change">New Storyline</string>
    <string name="storyline_change_message_sl">Do you want to leave the current storyline for the newly selected one: %1$s?</string>
    <string name="storyline_change_message_poi">Do you want to leave the current navigation for this storyline: %1$s?</string>
    <string name="storyline_go_to_starting_point">Starting Point</string>
    <string name="storyline_go_to_starting_point_message">To start a storyline, you must be at the starting point (info center).  Do you want to launch the navigation towards the starting point?</string>
    <string name="storyline_start_pending">Start Stoyline</string>
    <string name="storyline_start_pending_message">Do you want to start the previously selected storyline: %1$s?</string>

    <!-- Navigation -->
    <string name="navigation_leave">Leave Navigation</string>
    <string name="navigation_leave_message">Do you want to leave your navigation towards the current point of interest?</string>
    <string name="navigation_change">New Destination</string>
    <string name="navigation_change_message_sl">Do you want to leave the current storyline for the newly selected point of interest: %1$s?</string>
    <string name="navigation_change_message_poi">Do you want to leave the current navigation for the newly selected one: %1$s?</string>
    <string name="navigation_already_at_poi">Your last position corresponds to the chosen destination.</string>



    <!-- Web Client strings -->
    <string name="web_go_to_destination">Go to Destination</string>
    <string name="web_change_destination">Change Destination</string>
    <string name="web_view_info">View Info</string>

    <!-- Notifications -->
    <string name="notification_poi_reached_title">Point of Interest Reached</string>
    <string name="notification_poi_reached_text">You reached the point of interest: %1$s</string>
    <string name="notification_poi_reached_floor">Floor: %1$s</string>

    <!-- Tabs -->
    <string name="tab_info">Info</string>
    <string name="tab_images">Images</string>
    <string name="tab_media">Media</string>

    <!-- QR Scanner -->
    <string name="qr_scanner_result">QR Code</string>

</resources>
